@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-11T02:02:59Z",
+  "timestamp" : "2022-10-11T08:31:29Z",
   "count_outdated" : 2486,
   "uniques_outdated" : 635,
   "count" : 2508,
-  "uniques" : 647,
+  "uniques" : 648,
   "clones" : [
     {
       "timestamp": "2022-09-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -65,6 +65,13 @@
       "timestamp": "2022-10-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
