@@ -1,3 +1,11 @@
+2022-10-11T08:31:29Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3225305616
+* notice: last 14d: unq all: 5 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 635 2486 / 647 2508
+* notice: next accum: outdated-unq outdated-all / unq all: 635 2486 / 648 2508
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-27 2022-10-11]
+
 2022-10-11T02:02:59Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3223609637
 * notice: last 14d: unq all: 5 22
